--- a/careconnect/package.json
+++ b/careconnect/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chakra-react-select": "^4.7.3",
     "framer-motion": "^10.15.1",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
