--- a/careconnect/package.json
+++ b/careconnect/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chakra-react-select": "^4.7.3",
+    "firebase": "^10.4.0",
     "framer-motion": "^10.15.1",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
