--- a/careconnect/package.json
+++ b/careconnect/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.4.0",
     "framer-motion": "^10.15.1",
     "jsonwebtoken": "^9.0.2",
+    "node-mailjet": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
